feat: add functionality to generate compliance reports with filter by year